--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Learn Magic from the Pros</h1>
-<h2>I'm an illusionist, Michael.</h2>
+<div class="hero">
+    <div class="frosty text-center">
+        <h1>Learn Magic from the Pros</h1>
+        <h2>I'm an illusionist, Michael.</h2>
+        <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+    </div>
+</div>
