Added features to root page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,3 +5,21 @@
         <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
     </div>
 </div>
+
+<br/>
+<div class="row feature text-center">
+    <div class="col-12 col sm">
+        <h3>Full Stack Web Development</h3>
+        <p>Become a full stack developer by learning front end & back end technologies</p>
+    </div>
+
+    <div class="col-12 col sm">
+        <h3>Video Editing</h3>
+        <p>Learn how to edit & create high quality video with the newest teshnologies</p>
+    </div>
+
+    <div class="col-12 col sm">
+        <h3>Join our Community</h3>
+            <p>Learn with a community of like-minded individuals.</p>
+    </div>
+</div>
