Added before actions & permissions to instructor lessons controller

--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @lesson, url: instructor_section_lessons_path(@section) do |f| %>
+<%= simple_form_for @lesson, url: instructor_section_lessons_path(current_section) do |f| %>
 <br />
     <div class="container">
         <form>
