--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -7,6 +7,7 @@
                     <br/>
                 <%= f.input :title %>
                 <%= f.input :description %>
+                <%= f.input :image %>
                 <%= f.input :cost %>
                 <br />
                 <%= f.submit "Create", class: 'btn btn-primary' %>
