--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       <div class="container">
         <b>Teachers</b>
         <br />
-        <%= link_to 'Teach a Course', 'new_instructor_course_path' %>
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
       </div>
     </div>
   </body>
