--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
     <div class="frosty text-center">
         <h1>Learn Magic from the Pros</h1>
         <h2>I'm an illusionist, Michael.</h2>
-        <%= link_to 'Learn More', 'courses_path', class: 'btn btn-success' %>
+        <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     </div>
 </div>
 
