--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,10 +3,13 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center">Learn something today</h1>
   <hr />
-    <%= image_tag @course.image.url, class: 'img-fluid' %>
+    
     <% @courses.each do |course|%>
         <h2 class="text-center"><%= link_to course.title, course_path(course) %></h2>
         <br />
+        <% if course.image.present? %>
+        <%= image_tag course.image.url, class: 'img-fluid' %>
+        <% end %>
         <div class="row">
             <div class="col-sm-8 col-12">
                 <%= course.description %>
