--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -6,6 +6,7 @@
                 <h1>Add a new section</h1>
                     <%= f.input :title %>
                     <%= f.input :subtitle %>
+                    <%= f.input :video %>
                     <br/>
                     <%= f.submit "Add the Lesson"%>   
             </div>
