--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
         <form>
             <div class="form-group">
-                <h1>Add a new section</h1>
+                <h1>Add a new Lesson</h1>
                     <%= f.input :title %>
                     <%= f.input :subtitle %>
                     <%= f.input :video %>
