--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -2,16 +2,15 @@
     $(function() {
         $('.lessons').sortable({
             update: function(event, ui) {
-                      $.ajax({
+             $.ajax({
           type: 'PUT',
           url: ui.item.data('update-url'),
           dataType: 'json',
           data: { lesson: { row_order_position: ui.item.index() } }
- 
-                });
-            }
         });
+      }
     });
+   });
 </script>
 <br />
 <div class="booyah-box col-10 offset-1">
@@ -34,7 +33,7 @@
                 <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
                 <ul class="lessons"> 
                     <% section.lessons.rank(:row_order).each do |lesson| %>
-                        <li data-item-id=<%= lesson.id %>>
+                        <li data-update-url="<%= instructor_lesson_path(lesson) %>">
                             <b><%= lesson.title %></b>
                             -
                             <%= lesson.subtitle %>
