--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 .navbar {
     font-family: "Helvetica Neue", Helvetica;
     font-weight: 200;
@@ -72,4 +74,32 @@ body {
     border: 1px solid;
     border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
     padding: 20px;
+}
+ul {
+    list-style-type: none;
+}
+.section-li {
+    border: 1px solid;
+    border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+    padding: 20px;
+    margin: 20px;
+}
+ul .header {
+    font-size: 25px;
+}
+ul .header .fas {
+    font-size: 20px;
+}
+.lessons li {
+    background: darkcyan;
+    color: white;
+    margin: 10px;
+    padding: 8px;
+}
+.lessons li b {
+    font-size: 25px;
+    font-weight: 100;
+}
+.lessons li b {
+    margin: 0;
 }
