--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <script>
     $(function() {
         $('.lessons').sortable({
@@ -7,6 +8,18 @@
           url: ui.item.data('update-url'),
           dataType: 'json',
           data: { lesson: { row_order_position: ui.item.index() } }
+        });
+      }
+    });
+   });
+       $(function() {
+        $('.sections').sortable({
+            update: function(event, ui) {
+             $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.index() } }
         });
       }
     });
@@ -26,17 +39,33 @@
         <%= link_to 'Add a new section', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
     </div>
 
-    <ul>
+    <ul class="sections">
         <% current_course.sections.rank(:row_order).each do |section| %>
-            <li>
-                <%= section.title%>
+            <li data-update-url="<%= instructor_section_path(section) %>", class="section-li">
+                <div class="header">
+                    <span class="fas fa-ellipsis-v"></span>
+                    <%= section.title%>
+                </div>
                 <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+                <br class="clr" />
+                <br class="clr" />
                 <ul class="lessons"> 
                     <% section.lessons.rank(:row_order).each do |lesson| %>
                         <li data-update-url="<%= instructor_lesson_path(lesson) %>">
-                            <b><%= lesson.title %></b>
-                            -
-                            <%= lesson.subtitle %>
+                         <div class="row">
+                            <div class="col-1">
+                                <span class="fa fa-ellipsis-v"></span>
+                            </div>
+                            <div class="col-11">
+                            <p>
+                                <b><%= lesson.title %></b>
+                            </p>
+                            <p>
+                                <%= lesson.subtitle %>
+                            </p>
+                            </div>
+                        </div>
+                         <br class="clr" />
                         </li>
                     <% end %>
                 </ul>
