--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,41 @@
     </div>
     <div id="footer">
       <div class="container">
-        <b>Teachers</b>
-        <br />
-        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <div class="row">
+          <div class="col-12 col-sm-3">
+            <b>Teachers</b>
+            <br />
+            <%= link_to 'Teach a Course', new_instructor_course_path %>
+            <br />
+            <%= link_to 'My Dashboard', dashboard_path %>
+          </div>
+          <div class="col-12 col-sm-3">
+            <b>About</b>
+            <br />
+            <%= link_to 'Team', '#' %>
+            <br />
+            <%= link_to 'Careers', '#' %>
+            <br />
+            <%= link_to 'Privacy Policy', privacy_path %>
+          </div>
+          <div class="col-12 col-sm-3">
+            <b>Contact</b>
+            <br />
+            claudwin.fortune@gmail.com
+            <br />
+            Edmonton AB, T6X 0H4
+          </div>
+          <div class="col-12 col-sm-3 social">
+            <b>Social</b>
+              <br />
+              <br />
+              <%= link_to 'http://github.com/claudwin' do %>
+              <span class="fab fa-github-square fa-2x social-button"></span>
+              <% end %>
+              <span class="fab fa-facebook-square fa-2x social-button"></span>
+              <span class="fab fa-twitter-square fa-2x social-button"></span>
+          </div>
+        </div>
       </div>
     </div>
     <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
