--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,12 +1,22 @@
 <br />
 
 <div class="booyah-box col-10 offset-1">
-    <h1><%= current_lesson.title %></h1>
-  <p>
+  <h1>
+    <%= current_lesson.title %>
+  </h1>
+  <p class="float-left">
     <%= current_lesson.subtitle %>
   </p>
-   <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto"
-  poster="<%= image_path('black.jpg') %>" data-setup="{}">
+    <% if current_lesson.next_lesson.present? %>
+      <%= link_to lesson_path(current_lesson.next_lesson), class: 'btn btn-default float-right' do %>
+      Next Lesson &nbsp;
+      <span class="fas fa-forward"></span>
+      <% end %>
+    <% end %>
+  <br class="clr" />
+  <br />
+  <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto" poster="<%= image_path('black.jpg') %>"
+    data-setup="{}">
     <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
     <noscript>
       <p class="vjs-no-js">
@@ -15,4 +25,4 @@
       </p>
     </noscript>
   </video>
-  </div>
+</div>
