--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,24 +1,28 @@
-<div class="hero">
-    <div class="frosty text-center">
-        <h1>Learn Magic from the Pros</h1>
-        <h2>I'm an illusionist, Michael.</h2>
+<div class="hero container">
+<div class="row align center">
+    <div class="frosty col-10 offset-1 text-center">
+        <h1>Eduction for All</h1>
+        <br/>
+        <h3>Tech Healthcare Marketing Videography Etc.</h3>
+        <br/>
         <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+    </div>
     </div>
 </div>
 
 <br/>
 <div class="row feature text-center">
-    <div class="col-12 col sm">
+    <div class="col-12 col-sm">
         <h3>Full Stack Web Development</h3>
         <p>Become a full stack developer by learning front end & back end technologies</p>
     </div>
 
-    <div class="col-12 col sm">
+    <div class="col-12 col-sm">
         <h3>Video Editing</h3>
         <p>Learn how to edit & create high quality video with the newest teshnologies</p>
     </div>
 
-    <div class="col-12 col sm">
+    <div class="col-12 col-sm">
         <h3>Join our Community</h3>
             <p>Learn with a community of like-minded individuals.</p>
     </div>
